# tt

./: .gitignore  CMakeLists.txt  README.md  tt.desktop
cmake/: Info.plist.in
scripts/: gen-icns.sh
src/: app.cpp  app.h  data.cpp  data.h  font.cpp  font.h  main.cpp  main_macos.mm  renderer.cpp  renderer.h  sync.cpp  sync.h  tt_frame.cpp  tt_frame.h  tt_icon.h
